5238.	[bug]		Fix a possible deadlock in TCP code. [GL #1046]

5237.	[bug]		Recurse to find the root server list with 'dig +trace'.
			[GL #1028]

5236.	[func]		Add SipHash 2-4 implementation in lib/isc/siphash.c
			and switch isc_hash_function() to use SipHash 2-4.
			[GL #605]

5235.	[cleanup]	Refactor lib/isc/app.c to be thread-safe, unused
			parts of the API has been removed and the
			isc_appctx_t data type has been changed to be
			fully opaque. [GL #1023]

5234.	[port]		arm: just use the compiler's default support for
			yield. [GL #981]

	--- 9.15.0 released ---

5233.	[bug]		Negative trust anchors did not work with "forward only;"
			to validating resolvers. [GL #997]

5232.	[placeholder]

5231.	[protocol]	Add support for displaying CLIENT-TAG and SERVER-TAG.
			[GL #960]

5230.	[protocol]	The SHA-1 hash algorithm is no longer used when
			generating DS and CDS records. [GL #1015]

5229.	[protocol]	Enforce known SSHFP fingerprint lengths. [GL #852]

5228.	[func]		If trusted-keys and managed-keys were configured
			simultaneously for the same name, the key could
			not be be rolled automatically. This is now
			a fatal configuration error. [GL #868]

5227.	[placeholder]

5226.	[placeholder]

5225.	[func]		Allow dig to print out AAAA record fully expanded.
			with +[no]expandaaaa. [GL #765]

5224.	[bug]		Only test provide-ixfr on TCP streams. [GL #991]

5223.	[bug]		Fixed a race in the filter-aaaa plugin accessing
			the hash table. [GL #1005]

5222.	[bug]		'delv -t ANY' could leak memory. [GL #983]

5221.	[test]		Enable parallel execution of system tests on
			Windows. [GL !4101]

5220.	[cleanup]	Refactor the isc_stat structure to take advantage
			of stdatomic. [GL !1493]

5219.	[bug]		Fixed a race in the filter-aaaa plugin that could
			trigger a crash when returning an instance object
			to the memory pool. [GL #982]

5218.	[bug]		Conditionally include <dlfcn.h>. [GL #995]

5217.	[bug]		Restore key id calculation for RSAMD5. [GL #996]
